--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -87,7 +87,7 @@
                         <span class="icon icon-primary text-middle mdi mdi-phone"></span>
                       </div>
                       <div class="unit__body">
-                        <a class="text-middle" href="tel:#">+54 1123456789</a>
+                        <a class="text-middle" href="https://wa.me/541152850586" target="_blank">+54 1152850586</a>
                       </div>
                     </div>
                   </div>
@@ -133,26 +133,26 @@
           <div class="footer-banner section-sm"></div>
           <div class="page-footer-minimal">
             <div class="shell-wide">
-              <div class="range range-50">
+              <div class="range range-50 base-footer">
                 <div class="cell-sm-6 cell-md-3 cell-lg-4 wow fadeInUp" data-wow-delay=".1s">
                   <div class="page-footer-minimal-inner">
-                    <h4>Opening Hours</h4>
+                    <h4>Abierto todo el año</h4>
                     <ul class="list-unstyled">
                       <li>
                         <div class="group-xs">
                           <div>
                             <dl class="list-desc">
-                              <dt>Weekdays:</dt>
+                              <dt>Días de semana:</dt>
                               <dd class="text-gray-darker">
-                                <span>8:00–20:00</span>
+                                <span>08:00 – 20:00hs</span>
                               </dd>
                             </dl>
                           </div>
                           <div>
                             <dl class="list-desc">
-                              <dt>Weekends:</dt>
+                              <dt>Fin de semana:</dt>
                               <dd class="text-gray-darker">
-                                <span>9:00–18:00</span>
+                                <span>09:00 – 18:00 hs</span>
                               </dd>
                             </dl>
                           </div>
@@ -168,7 +168,7 @@
                 </div>
                 <div class="cell-sm-6 cell-md-5 cell-lg-4 wow fadeInUp" data-wow-delay=".2s">
                   <div class="page-footer-minimal-inner">
-                    <h4>Address</h4>
+                    <h4>Dirección</h4>
                     <ul class="list-unstyled">
                       <li>
                         <dl class="list-desc">
@@ -176,7 +176,7 @@
                             <span class="icon icon-sm mdi mdi-map-marker"></span>
                           </dt>
                           <dd>
-                            <a class="link link-gray-darker" href="#">6036 Richmond hwy., Alexandria, VA, 2230</a>
+                            <a class="link link-gray-darker" href="http://maps.google.com/?q=avenida+paseo+colon+850" target="_blank">Avenida Paseo Colón 850, C.A.B.A., C1063ACV</a>
                           </dd>
                         </dl>
                       </li>
@@ -186,8 +186,8 @@
                             <span class="icon icon-sm mdi mdi-phone"></span>
                           </dt>
                           <dd class="text-gray-darker">
-                            Call Us:
-                            <a class="link link-gray-darker" href="tel:#">+54 1123456789</a>
+                            Contactanos:
+                            <a class="link link-gray-darker" href="https://wa.me/541152850586" target="_blank">+54 1152850586</a>
                           </dd>
                         </dl>
                       </li>
