--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:400,700,400italic%7CPoppins:300,400,500,700" />
     <link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.css')}}" />
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" />
+    <!-- Scripts -->
   </head>
   <body>
     <!-- Page-->
@@ -136,7 +137,7 @@
               <div class="range range-50 base-footer">
                 <div class="cell-sm-6 cell-md-3 cell-lg-4 wow fadeInUp" data-wow-delay=".1s">
                   <div class="page-footer-minimal-inner">
-                    <h4>Abierto todo el año</h4>
+                    <h4>Abierto todos los días del año</h4>
                     <ul class="list-unstyled">
                       <li>
                         <div class="group-xs">
@@ -152,7 +153,7 @@
                             <dl class="list-desc">
                               <dt>Fin de semana:</dt>
                               <dd class="text-gray-darker">
-                                <span>09:00 – 18:00 hs</span>
+                                <span>08:00 – 20:00hs</span>
                               </dd>
                             </dl>
                           </div>
@@ -160,7 +161,7 @@
                       </li>
                       <li>
                         <p class="rights">
-                          <span>&copy;&nbsp;</span><span>2019</span><span>&nbsp;</span><span class="copyright-year"></span>Royal Villas.
+                          <span>&copy;&nbsp;</span><span>2024</span><span>&nbsp;</span><span class="copyright-year"></span>Royal Villas.
                         </p>
                       </li>
                     </ul>
