--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -70,7 +70,7 @@
               <div class="cell-lg-12 cell-md-4">
                 <p class="text-uppercase">Nombre Completo</p>
                 <div class="form-wrap">
-                  <input class="form-input" id="contact-first-name" type="text" name="name" data-constraints="@Required" />
+                  <input class="form-input" id="contact-first-name" type="text" name="name" data-constraints="@Required" autocomplete="on" />
                   <label class="form-label" for="contact-first-name">Nombre y apellido</label>
                 </div>
               </div>
@@ -78,14 +78,14 @@
                 <p class="text-uppercase">Entrada</p>
                 <div class="form-wrap">
                   <label class="form-label form-label-icon" for="date-in"><span class="icon icon-primary fa-calendar"></span><span>Fecha de entrada</span></label>
-                  <input class="form-input" id="date-in" data-time-picker="date" type="text" name="date" data-constraints="@Required" />
+                  <input class="form-input" id="date-in" data-time-picker="date" type="text" name="date" data-constraints="@Required" role="button"/>
                 </div>
               </div>
               <div class="cell-lg-12 cell-md-4 cell-sm-6">
                 <p class="text-uppercase">Salida</p>
                 <div class="form-wrap">
                   <label class="form-label form-label-icon" for="date-out"><span class="icon icon-primary fa-calendar"></span><span>Fecha de salida</span></label>
-                  <input class="form-input" id="date-out" data-time-picker="date" type="text" name="date" data-constraints="@Required" />
+                  <input class="form-input" id="date-out" data-time-picker="date" type="text" name="date" data-constraints="@Required" role="button"/>
                 </div>
               </div>
               <div class="cell-lg-6 cell-md-4 cell-xs-6">
