--- a/app-web/templates/base.html
+++ b/app-web/templates/base.html
@@ -137,7 +137,7 @@
               <div class="range range-50 base-footer">
                 <div class="cell-sm-6 cell-md-3 cell-lg-4 wow fadeInUp" data-wow-delay=".1s">
                   <div class="page-footer-minimal-inner">
-                    <h4>Abierto todos los días del año</h4>
+                    <h4>Abierto todos los días.</h4>
                     <ul class="list-unstyled">
                       <li>
                         <div class="group-xs">
@@ -161,7 +161,7 @@
                       </li>
                       <li>
                         <p class="rights">
-                          <span>&copy;&nbsp;</span><span>2024</span><span>&nbsp;</span><span class="copyright-year"></span>Royal Villas.
+                          <span>&copy;&nbsp;</span><span>2024</span><span>&nbsp;</span><span class="copyright-year"></span>Flask Seasons.
                         </p>
                       </li>
                     </ul>
