--- a/app-web/templates/index.html
+++ b/app-web/templates/index.html
@@ -11,7 +11,7 @@
           <!-- Swiper -->
           <div class="swiper-container swiper-slider swiper-style-2" data-loop="false" data-autoplay="5500" data-simulate-touch="false" data-slide-effect="slide" data-direction="vertical">
             <div class="swiper-wrapper">
-              <div class="swiper-slide" data-slide-bg="{{url_for('static', filename='images/slide-01.jpg')}}">
+              <div class="swiper-slide" data-slide-bg="{{url_for('static', filename='images/slide-1.jpg')}}">
                 <div class="swiper-slide-caption">
                   <div class="shell text-sm-left">
                     <h1 data-caption-animate="slideInDown" data-caption-delay="100">Tu Hotel Ideal</h1>
@@ -26,7 +26,7 @@
                   </div>
                 </div>
               </div>
-              <div class="swiper-slide" data-slide-bg="{{url_for('static', filename='images/slide-02.jpg')}}">
+              <div class="swiper-slide" data-slide-bg="{{url_for('static', filename='images/slide-2.jpg')}}">
                 <div class="swiper-slide-caption">
                   <div class="shell text-sm-left">
                     <h1 data-caption-animate="slideInDown" data-caption-delay="100">Relajate & Desconecta</h1>
@@ -41,7 +41,7 @@
                   </div>
                 </div>
               </div>
-              <div class="swiper-slide" data-slide-bg="{{url_for('static', filename='images/slide-03.jpg')}}">
+              <div class="swiper-slide" data-slide-bg="{{url_for('static', filename='images/slide-3.jpg')}}">
                 <div class="swiper-slide-caption">
                   <div class="shell text-sm-left">
                     <h1 data-caption-animate="slideInDown" data-caption-delay="100">Revitalizar & Relajarse</h1>
@@ -140,45 +140,45 @@
       <div class="row isotope" data-isotope-layout="masonry" data-isotope-group="gallery" data-lightgallery="group">
         <div class="col-xs-12 col-sm-6 col-md-3 grid-sizer"></div>
         <div class="col-xs-12 col-sm-6 col-md-3 isotope-item wow fadeInUp" data-filter="Category 1" data-wow-delay=".1s">
-          <a class="portfolio-item thumbnail-classic" href="{{url_for('static', filename='images/gallery-1-533x800_original.jpg')}}" data-size="533x800" data-lightgallery="item"
-            ><img src="{{url_for('static', filename='images/gallery-1-420x584.jpg')}}" alt="" width="420" height="584" />
+          <a class="portfolio-item thumbnail-classic" href="{{url_for('static', filename='images/gallery-1-original.jpg')}}" data-size="533x800" data-lightgallery="item"
+            ><img src="{{url_for('static', filename='images/gallery-1.jpg')}}" alt="" width="420" height="584" />
             <figure></figure>
-            <div class="caption"><span class="icon mdi-thumb-up-outline">346</span><span class="icon mdi-eye">220</span></div></a
+            <div class="caption"><span class="icon mdi-eye"></span></div></a
           >
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 isotope-item wow fadeInUp" data-filter="Category 1" data-wow-delay=".2s">
-          <a class="portfolio-item thumbnail-classic" href="{{url_for('static', filename='images/gallery-2-1199x800_original.jpg')}}" data-size="1199x800" data-lightgallery="item"
-            ><img src="{{url_for('static', filename='images/gallery-2-420x278.jpg')}}" alt="" width="420" height="278" />
+          <a class="portfolio-item thumbnail-classic" href="{{url_for('static', filename='images/gallery-2-original.jpg')}}" data-size="1199x800" data-lightgallery="item"
+            ><img src="{{url_for('static', filename='images/gallery-2.jpg')}}" alt="" width="420" height="278" />
             <figure></figure>
-            <div class="caption"><span class="icon mdi-thumb-up-outline">346</span><span class="icon mdi-eye">220</span></div></a
+            <div class="caption"><span class="icon mdi-eye"></span></div></a
           >
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 isotope-item wow fadeInUp" data-filter="Category 1" data-wow-delay=".4s">
-          <a class="portfolio-item thumbnail-classic" href="{{url_for('static', filename='images/images/gallery-3-584x800_original.jpg')}}" data-size="584x800" data-lightgallery="item"
-            ><img src="{{url_for('static', filename='images/gallery-3-420x584.jpg')}}" alt="" width="420" height="584" />
+          <a class="portfolio-item thumbnail-classic" href="{{url_for('static', filename='images/gallery-3-original.jpg')}}" data-size="584x800" data-lightgallery="item"
+            ><img src="{{url_for('static', filename='images/gallery-3.jpg')}}" alt="" width="420" height="584" />
             <figure></figure>
-            <div class="caption"><span class="icon mdi-thumb-up-outline">346</span><span class="icon mdi-eye">220</span></div></a
+            <div class="caption"><span class="icon mdi-eye"></span></div></a
           >
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 isotope-item wow fadeInUp" data-filter="Category 1" data-wow-delay=".5s">
-          <a class="portfolio-item thumbnail-classic" href="{{url_for('static', filename='images/gallery-4-1200x800_original.jpg')}}" data-size="1200x800" data-lightgallery="item"
-            ><img src="{{url_for('static', filename='images/gallery-4-420x278.jpg')}}" alt="" width="420" height="278" />
+          <a class="portfolio-item thumbnail-classic" href="{{url_for('static', filename='images/gallery-4-original.jpg')}}" data-size="1200x800" data-lightgallery="item"
+            ><img src="{{url_for('static', filename='images/gallery-4.jpg')}}" alt="" width="420" height="278" />
             <figure></figure>
-            <div class="caption"><span class="icon mdi-thumb-up-outline">346</span><span class="icon mdi-eye">220</span></div></a
+            <div class="caption"><span class="icon mdi-eye"></span></div></a
           >
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 isotope-item wow fadeInUp" data-filter="Category 1" data-wow-delay=".3s">
-          <a class="portfolio-item thumbnail-classic" href="{{url_for('static', filename='images/gallery-5-1200x800_original.jpg')}}" data-size="1200x800" data-lightgallery="item"
-            ><img src="{{url_for('static', filename='images/gallery-5-420x278.jpg')}}" alt="" width="420" height="278" />
+          <a class="portfolio-item thumbnail-classic" href="{{url_for('static', filename='images/gallery-5-original.jpg')}}" data-size="1200x800" data-lightgallery="item"
+            ><img src="{{url_for('static', filename='images/gallery-5.jpg')}}" alt="" width="420" height="278" />
             <figure></figure>
-            <div class="caption"><span class="icon mdi-thumb-up-outline">346</span><span class="icon mdi-eye">220</span></div></a
+            <div class="caption"><span class="icon mdi-eye"></span></div></a
           >
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3 isotope-item wow fadeInUp" data-filter="Category 1" data-wow-delay=".6s">
-          <a class="portfolio-item thumbnail-classic" href="{{url_for('static', filename='images/gallery-6-1200x798_original.jpg')}}" data-size="1200x798" data-lightgallery="item"
-            ><img src="{{url_for('static', filename='images/gallery-6-420x278.jpg')}}" alt="" width="420" height="278" />
+          <a class="portfolio-item thumbnail-classic" href="{{url_for('static', filename='images/gallery-6-original.jpg')}}" data-size="1200x798" data-lightgallery="item"
+            ><img src="{{url_for('static', filename='images/gallery-6.jpg')}}" alt="" width="420" height="278" />
             <figure></figure>
-            <div class="caption"><span class="icon mdi-thumb-up-outline">346</span><span class="icon mdi-eye">220</span></div></a
+            <div class="caption"><span class="icon mdi-eye"></span></div></a
           >
         </div>
       </div>
