--- a/app-web/templates/index.html
+++ b/app-web/templates/index.html
@@ -32,8 +32,8 @@
                     <h1 data-caption-animate="slideInDown" data-caption-delay="100">Relajate & Desconecta</h1>
                     <div class="slider-subtitle-group">
                       <div class="decoration-line" data-caption-animate="slideInDown" data-caption-delay="400"></div>
-                      <h4 data-caption-animate="slideInLeft" data-caption-delay="700">Experimenta el lujo</h4>
-                      <h3 data-caption-animate="slideInLeft" data-caption-delay="800">de nuestro gran spa</h3>
+                      <h4 data-caption-animate="slideInLeft" data-caption-delay="700">Experimenta el silencio</h4>
+                      <h3 data-caption-animate="slideInLeft" data-caption-delay="800">de los valles del norte</h3>
                     </div>
                     <a class="button button-effect-ujarak button-lg button-white-outline button-square" href="{{url_for('hoteles')}}" data-caption-animate="slideInLeft" data-caption-delay="1150"
                       ><span>Reservar</span></a
@@ -47,8 +47,8 @@
                     <h1 data-caption-animate="slideInDown" data-caption-delay="100">Revitalizar & Relajarse</h1>
                     <div class="slider-subtitle-group">
                       <div class="decoration-line" data-caption-animate="slideInDown" data-caption-delay="400"></div>
-                      <h4 data-caption-animate="slideInLeft" data-caption-delay="700">Entra dentro de nuestro</h4>
-                      <h3 data-caption-animate="slideInLeft" data-caption-delay="800">super resort</h3>
+                      <h4 data-caption-animate="slideInLeft" data-caption-delay="700">Entra dentro de nuestros</h4>
+                      <h3 data-caption-animate="slideInLeft" data-caption-delay="800">paisajes únicos</h3>
                     </div>
                     <a class="button button-effect-ujarak button-lg button-white-outline button-square" href="{{url_for('hoteles')}}" data-caption-animate="slideInLeft" data-caption-delay="1150"
                       ><span>Reservar</span></a
