--- a/app-web/templates/base.html
+++ b/app-web/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8" />
-    <link rel="icon" href="{{url_for('static', filename='images/favicon.ico')}}" type="image/x-icon" />
+    <link rel="icon" href="{{url_for('static', filename='images/flasklogo.ico')}}" type="image/x-icon" />
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:400,700,400italic%7CPoppins:300,400,500,700" />
     <link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.css')}}" />
@@ -77,7 +77,7 @@
                 <div class="center-side">
                   <!-- RD Navbar Brand-->
                   <div class="rd-navbar-brand fullwidth-brand">
-                    <a class="brand-name" href="{{url_for('index')}}"><img src="{{url_for('static', filename='images/logo-default-314x48.png')}}" alt="" width="314" height="48" /></a>
+                    <a class="brand-name" href="{{url_for('index')}}"><img src="{{url_for('static', filename='images/logo_default_black.png')}}" alt="" width="340" height="60" /></a>
                   </div>
                 </div>
                 <div class="right-side">
@@ -108,7 +108,7 @@
                 </button>
                 <!-- RD Navbar Brand-->
                 <div class="rd-navbar-brand mobile-brand">
-                  <a class="brand-name" href="{{url_for('index')}}"><img src="{{url_for('static', filename='images/logo-default-314x48.png')}}" alt="" width="314" height="48" /></a>
+                  <a class="brand-name" href="{{url_for('index')}}"><img src="{{url_for('static', filename='images/logo_default_black.png')}}" alt="" width="340" height="60" /></a>
                 </div>
               </div>
               <div class="rd-navbar-aside-right">
