Agrego vista a  las imagenes

--- a/app-web/templates/hoteles.html
+++ b/app-web/templates/hoteles.html
@@ -22,55 +22,55 @@
     </p>
     <div class="range range-30" data-lightgallery="group">
       <div class="cell-sm-6 cell-md-4">
-        <a class="thumbnail-classic" href="#">
+        <a class="thumbnail-classic" href="{{url_for('disponibilidad')}}">
           <figure><img src="{{url_for('static', filename='images/hotel-1.jpg')}}" alt="" width="370" height="276" /></figure>
           <div class="caption">
-            <p class="caption-title">Flask Seasons<span>Bariloche Lagos Andinos</span></p>
+            <p class="caption-title">Flask Seasons<span>Lagos Andinos, Bariloche </span></p>
             <p class="caption-text">Toque para ver la disponibilidad</p>
           </div></a
         >
       </div>
       <div class="cell-sm-6 cell-md-4">
-        <a class="thumbnail-classic" href="#">
+        <a class="thumbnail-classic" href="{{url_for('disponibilidad')}}">
           <figure><img src="{{url_for('static', filename='images/hotel-2.jpg')}}" alt="" width="370" height="276" /></figure>
           <div class="caption">
-            <p class="caption-title">Flask Seasons<span>Mar del Plata Buenos Aires</span></p>
+            <p class="caption-title">Flask Seasons<span>Mar del Plata ,Buenos Aires</span></p>
             <p class="caption-text">Toque para ver la disponibilidad</p>
           </div></a
         >
       </div>
       <div class="cell-sm-6 cell-md-4">
-        <a class="thumbnail-classic" href="#">
+        <a class="thumbnail-classic" href="{{url_for('disponibilidad')}}">
           <figure><img src="{{url_for('static', filename='images/hotel-3.jpg')}}" alt="" width="370" height="276" /></figure>
           <div class="caption">
-            <p class="caption-title">Flask Seasons<span>Cerro Siete Colores Jujuy</span></p>
+            <p class="caption-title">Flask Seasons<span>Cerro Siete Colores ,Jujuy</span></p>
             <p class="caption-text">Toque para ver la disponibilidad</p>
           </div></a
         >
       </div>
       <div class="cell-sm-6 cell-md-4">
-        <a class="thumbnail-classic" href="#">
+        <a class="thumbnail-classic" href="{{url_for('disponibilidad')}}">
           <figure><img src="{{url_for('static', filename='images/hotel-4.jpg')}}" alt="" width="370" height="276" /></figure>
           <div class="caption">
-            <p class="caption-title">Flask Seasons<span>Selva Misionera Posadas</span></p>
+            <p class="caption-title">Flask Seasons<span>Selva Misionera, Posadas</span></p>
             <p class="caption-text">Toque para ver la disponibilidad</p>
           </div></a
         >
       </div>
       <div class="cell-sm-6 cell-md-4">
-        <a class="thumbnail-classic" href="#">
+        <a class="thumbnail-classic" href="{{url_for('disponibilidad')}}">
           <figure><img src="{{url_for('static', filename='images/hotel-5.jpg')}}" alt="" width="370" height="276" /></figure>
           <div class="caption">
-            <p class="caption-title">Flask Seasons<span>Valle de la Luna San Juan</span></p>
+            <p class="caption-title">Flask Seasons<span>Valle de la Luna, San Juan</span></p>
             <p class="caption-text">Toque para ver la disponibilidad</p>
           </div></a
         >
       </div>
       <div class="cell-sm-6 cell-md-4">
-        <a class="thumbnail-classic" href="#">
+        <a class="thumbnail-classic" href="{{url_for('disponibilidad')}}">
           <figure><img src="{{url_for('static', filename='images/hotel-6.jpg')}}" alt="" width="370" height="276" /></figure>
           <div class="caption">
-            <p class="caption-title">Flask Seasons<span>Cerro Fitz Roy El Chaltén</span></p>
+            <p class="caption-title">Flask Seasons<span>Cerro Fitz Roy, El Chaltén</span></p>
             <p class="caption-text">Toque para ver la disponibilidad</p>
           </div></a
         >
