--- a/app-web/templates/disponibilidad.html
+++ b/app-web/templates/disponibilidad.html
@@ -2,27 +2,30 @@
 {%block title%} Hoteles {%endblock title%} 
 
 {%block content%}
-<section class="section section-md bg-white text-center">
+<div id="reserva-vista">
+<table class="section section-md bg-white text-center" id="reservas_hoteles">
 
             <form class="rd-mailform" data-form-output="form-output-global" data-form-type="contact" method="post" action="">
               <div class="range range-sm-bottom spacing-20">
                 <div>
-                <p class="text-uppercase">Elegi el hotel </p>
-                <div class="cell-sm-6">
-                  <div class="form-wrap">
-                    <label  for="options" id="contact-first-name" ></labe l>
-                    <select id="option"> 
-                    <option value="hotel-1">Lagos Andinos</option>
-                    <option value="hotel-2">Mar del Plata s</option>
-                    <option value="hotel-3">Cerro Siete Colores</option>
-                    <option value="hotel-4">Selva Misionera </option>
-                    <option value="hotel-5">Valle de la Luna </option>
-                    <option value="hotel-6">Cerro Fitz Roy </option>
-                </select>
+                  <p class="text-uppercase">Elegi el hotel</p>
+                  <div class="cell-sm-6">
+                    <div class="form-wrap">
+                      <label for="reserve_hotel" id="contact-first-name"></label>
+                      <input class="form-input" id="reserve_hotel" type="text" name="hotel" data-constraints="@Required" readonly role="button"/>
+                      <select id="hotel-options" onchange="updateHotelName()">
+                        <option value="">Selecciona un hotel...</option>
+                        <option value="Lagos Andinos">Lagos Andinos</option>
+                        <option value="Mar del Plata">Mar del Plata</option>
+                        <option value="Cerro Siete Colores">Cerro Siete Colores</option>
+                        <option value="Selva Misionera">Selva Misionera</option>
+                        <option value="Valle de la Luna">Valle de la Luna</option>
+                        <option value="Cerro Fitz Roy">Cerro Fitz Roy</option>
+                      </select>
+                    </div>
                   </div>
                 </div>
-            </div>
-           
+              </div>
                 <div class="cell-sm-6">
                   <p class="text-uppercase">Entrada</p>
                   <div class="form-wrap">
@@ -42,5 +45,6 @@
                 </div>
               </div>
             </form>
-        </section>
+</table>
+</div>
 {%endblock content%}
