--- a/app-web/static/css/style.css
+++ b/app-web/static/css/style.css
@@ -78,14 +78,33 @@
 	justify-content: space-between;
 }
 
-.boton-reserva {
+.boton-container-reserva {
     min-width: 100%;
     display: flex;
-    justify-content: flex-end;
+	align-items: flex-start;
+    justify-content: space-between;
 }
 
-.boton-reserva .button {
+.boton-container-reserva::before {
+	display: none !important;
+}
+
+.boton-container-reserva .button {
 	width: fit-content;
+	margin-top: 0;
+}
+
+.container-error-message {
+	height: 100%;
+	width: 50%;
+}
+
+.container-error-message .text-error-message {
+	text-wrap: balance;
+    color: #d9534f;
+	font-size: 16px;
+	line-height: 20px;
+	transition: .3s;
 }
 
 .thumbnail-classic .caption-title span {
@@ -107,6 +126,8 @@
 	margin-bottom: 5px;
 	color: #363d41;
 }
+
+
 
 /* -------------------- END PROPIOS --------------------  */
 
