--- a/app-web/templates/reservas.html
+++ b/app-web/templates/reservas.html
@@ -24,7 +24,7 @@
         <div class="contact-box">
           <h3>Consultá tu reserva</h3>
           <p>En Flask Seasons estamos disponible todos los días para vos. <br>Visualizá tus reservas por nuestra página web o por nuestra aplicación completando los siguientes datos.</p>
-          <form class="rd-mailform" method="post" action="{{url_for('reservas')}}">
+          <form class="rd-mailform" method="post" action="{{url_for('reservas')}}" >
             <div class="range range-sm-bottom spacing-20 form-reserva">
               <div class="cell-xl-12 cell-md-12 cell-sm-12 cell-form ">
                 <p class="label-form-reserva">Documento de identidad</p>
@@ -36,7 +36,7 @@
               <div class="cell-xl-12 cell-md-12 cell-sm-12 cell-form">
                 <p class="label-form-reserva">Número de reserva</p>
                 <div class="form-wrap">
-                  <input class="form-input" id="booking-number" type="text" name="booking_number" data-constraints="@Numeric @Required" autocomplete="on" />
+                  <input class="form-input" id="booking-number" type="text" name="numero_reserva" data-constraints="@Numeric @Required" autocomplete="on" />
                   <label class="form-label" for="booking-number">Número</label>
                 </div>
               </div>
