--- a/app-web/templates/index.html
+++ b/app-web/templates/index.html
@@ -77,15 +77,15 @@
               <div class="cell-lg-12 cell-md-4 cell-sm-6">
                 <p class="text-uppercase">Entrada</p>
                 <div class="form-wrap">
-                  <label class="form-label form-label-icon" for="date-in"><span class="icon icon-primary fa-calendar"></span><span>Fecha de entrada</span></label>
-                  <input class="form-input" id="date-in" data-time-picker="date" type="text" name="date" data-constraints="@Required" role="button"/>
+                  <label class="form-label form-label-icon" for="inicio_reserva"><span class="icon icon-primary fa-calendar"></span><span>Fecha de entrada</span></label>
+                  <input class="form-input" id="inicio_reserva" data-time-picker="date" type="text" name="date" data-constraints="@Required" role="button"/>
                 </div>
               </div>
               <div class="cell-lg-12 cell-md-4 cell-sm-6">
                 <p class="text-uppercase">Salida</p>
                 <div class="form-wrap">
-                  <label class="form-label form-label-icon" for="date-out"><span class="icon icon-primary fa-calendar"></span><span>Fecha de salida</span></label>
-                  <input class="form-input" id="date-out" data-time-picker="date" type="text" name="date" data-constraints="@Required" role="button"/>
+                  <label class="form-label form-label-icon" for="fin_reserva"><span class="icon icon-primary fa-calendar"></span><span>Fecha de salida</span></label>
+                  <input class="form-input" id="fin_reserva" data-time-picker="date" type="text" name="date" data-constraints="@Required" role="button"/>
                 </div>
               </div>
               <div class="cell-lg-6 cell-md-4 cell-xs-6">
